# aggregations-pattern

./: README.md  docker-compose.yml  mise.toml  pyproject.toml
aggregations/: config.py
aggregations/aggregator/: event_message.py  worker.py
aggregations/db/: __init__.py
aggregations/repos/: aggregates.py  base.py  cdc_entries.py  invoices.py
aggregations/webapp/: app.py
aggregations/webapp/templates/: aggregate.html  index.html  invoices.html
docker/: init.sql
docker/config/: application.properties
