[project]
name = "aggregations"
version = "0.1.0"
description = "Web-app + worker demonstrating the CDC pattern"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "psycopg[binary]>=3.2.9",
    "pulsar-client>=3.8.0",
]

[dependency-groups]
dev = [
  {include-group = "lint"},
  {include-group = "test"},
  "pgcli>=4.3.0",
]
lint = [
  "ruff"
]
test = [
  "pytest"
]
